samples/_failures_safe/1761657653_a87946_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd80b54a.c: In function ‘main’:
./samples/SAFE/__tmp_dd80b54a.c:157:17: error: expected expression at end of input
  157 |                 int status = add_matrices(&mat1, &mat2, &
      |                 ^~~
./samples/SAFE/__tmp_dd80b54a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd80b54a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd80b54a.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd80b54a.c:157:17: error: expected declaration or statement at end of input
